# Harness

Episode-01/hello-world-app/harness/: CI.yaml
Episode-03/go-project/: Deployment.md
Episode-03/terraform-project/: README.md  main.tf
Episode-04/cpp-project/: CMakeLists.txt
Episode-04/cpp-project/tests/: test_main.cpp
Episode-05/: README.md  ec2.md
Episode-05/node-project/: Dockerfile  package.json
Episode-05/node-project/src/: index.js  index.test.js
Harness-CI-CD-Zero-to-Hero-master/Episode-02/python-project/: Dockerfile  test_app.py
Harness-CI-CD-Zero-to-Hero-master/Episode-04/cpp-project/: Dockerfile  Templates.md
Harness-CI-CD-Zero-to-Hero-master/Episode-04/cpp-project/src/: main.cpp
Harness-CI-CD-Zero-to-Hero-master/Episode-05/node-project/: sonar-project.properties
Harness-CI-CD-Zero-to-Hero-master/Episode-06/: README.md
Harness-CI-CD-Zero-to-Hero-master/kubernetes/terraform/: eks.tf  variables.tf
kubernetes/: README.md
